@@ -9,7 +9,7 @@
 	# $f_id must be set and be set to the bug id
 ?>
 <?php
-	# @@@ uneeded? 
+	# @@@ uneeded?
 	#db_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
 
 	# grab the user id currently logged in
@@ -79,7 +79,7 @@
 				if ( get_bug_field( "status", $f_id ) < RESOLVED ) {
 					if (( access_level_check_greater_or_equal( ADMINISTRATOR ) ) ||
 						( $v3_reporter_id == $t_user_id )) {
-						print_bracket_link( $g_bugnote_edit_page."?f_bugnote_text_id=".$v3_bugnote_text_id."&f_id=".$f_id, $s_bugnote_edit_link );
+						print_bracket_link( $g_bugnote_edit_page."?f_bugnote_text_id=".$v3_bugnote_text_id."&f_id=".$f_id."&f_bugnote_id=".$v3_id, $s_bugnote_edit_link );
 						print_bracket_link( $g_bugnote_delete."?f_bugnote_id=".$v3_id."&f_id=".$f_id, $s_delete_link );
 					}
 				}
